# All-money-back-me-home

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.freqtrade  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.skills/: README.md  binance-crypto-market-rank.md  binance-spot.md  fastapi-router-py.md  next-best-practices.md  next-cache-components.md  pydantic-models-py.md  react-best-practices.md  stripe.md  supabase-postgres-best-practices.md  trading-system-architecture.md
agent/: Dockerfile  brain.py  cache_layer.py  data_collector.py  hallucination_guard.py  knowledge_extractor.py  memory.py  model_router.py  observability.py  prompt_builder.py  regime_detector.py  skill_evolver.py  skill_loader.py  summarizer.py  token_metrics.py  tools.py  trigger_engine.py
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: config.py  main.py
apps/api/src/fetchers/: base.py  crypto.py  tw_stock.py  us_stock.py
apps/api/src/i18n/: zh_tw.py
apps/api/src/jobs/: hourly_scanner.py  run_backtest.py
apps/api/src/models/: schemas.py
apps/api/src/routers/: analysis.py  dashboard.py  market_data.py  polymarket.py  smart_money.py  strategy.py  supertrend.py  system.py
apps/api/src/services/: risk_management.py  supabase_client.py  technical_analysis.py  trade_store.py
apps/api/src/strategy/: enums.py  models.py
apps/api/src/strategy/layer1_market_structure/: __init__.py  structure_analyzer.py  swing_detector.py
apps/api/src/strategy/layer2_signal_engine/: trend_indicators.py  volatility_indicators.py
apps/api/src/strategy/layer3_strategies/: base.py  strategy_b_squeeze.py
apps/api/src/strategy/layer5_backtest/: __init__.py  broker.py  data_feed.py  engine.py  metrics.py  models.py  walk_forward.py
apps/api/src/utils/: logger.py
apps/api/tests/: test_analysis.py  test_bb_squeeze.py  test_market_structure.py  test_polymarket_router.py  test_smart_money_router.py
archive/: README.md
cron/: crontab
(+517 files in other folders)
